Fixed design for lonn header on mobile

--- a/src/components/visualizations/Shared/VisualizationFilterHeader.module.scss
+++ b/src/components/visualizations/Shared/VisualizationFilterHeader.module.scss
@@ -19,6 +19,10 @@
             padding-left: 0;
             li {
               display: inline-block;
+              margin-right: 3px;
+              &:last-child {
+                margin-right: 0px;
+              }
             }
           }
         }
@@ -36,6 +40,8 @@
           margin-left: 8px;
           display: inline-block;
           vertical-align: middle;
+          min-width: 20px;
+          margin-top: 28px;
           &:before,
           &:after {
             content: "";
